<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/item_background"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTaskId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Task ID: "
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:text="@string/label_task_title"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvTaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/label_task_description"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/deleteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_today"
        android:drawableEnd="@drawable/close_popup"
        android:drawableTint="@color/red"
        android:padding="5dp"
        android:text="@string/label_delete"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:visibility="gone" />
</LinearLayout>
