<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/backIcon"
        android:text="@string/label_add_task"
        android:tint="@color/white"
        android:drawablePadding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:drawableLeft="@drawable/arrow_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:text="@string/label_select_date"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:textColorHint="@color/block_color"
        android:hint="@string/label_enter_user_id"
        android:textColor="@color/black"
        android:inputType="phone"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:hint="@string/label_enter_task_title"
        android:textColor="@color/black"
        android:textColorHint="@color/block_color"
        android:inputType="text"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:textColor="@color/black"
        android:textColorHint="@color/block_color"
        android:hint="@string/label_enter_task_description"
        android:inputType="textMultiLine"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/label_save_task"
        android:backgroundTint="@color/purple"
        android:textColor="@color/white"/>
</LinearLayout>

